tests/invalid/casestatements.nim
# Count: 0
# Negative count: 1

case a
  of 1:
    echo a
